--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -421,6 +421,23 @@
       "title" : "К сожалению, счетов не обнаружено",
       "description" : "Что-то пошло не так при вычислении адреса. Пожалуйста, попробуйте ещё раз. Если проблема не уходит, сохраните логи и отправьте их в Поддержку Ledger."
     },
+    "ElrondDecimalsLimitReached" : {
+      "title" : "Достигнут лимит десятичных знаков",
+      "description" : "Убедитесь, что у указанной суммы 18 десятичных знаков."
+    },
+    "ElrondMinDelegatedAmountError" : {
+      "title" : "Делегированная сумма должна быть не менее {{formattedAmount}}"
+    },
+    "ElrondMinUndelegatedAmountError" : {
+      "title" : "Неделегированных средств должно быть как минимум {{formattedAmount}}"
+    },
+    "ElrondDelegationBelowMinimumError" : {
+      "title" : "Остаток делегированных средств должен быть не менее {{formattedAmount}}"
+    },
+    "NotEnoughEGLDForFees" : {
+      "title" : "Недостаточно EGLD для оплаты комиссии за транзакцию",
+      "description" : "Пожалуйста, пополните счёт EGLD для оплаты транзакций."
+    },
     "NotEnoughBalance" : {
       "title" : "Кажется, у вас недостаточно средств",
       "description" : "Пожалуйста, убедитесь, что на счёте достаточно средств."
@@ -459,6 +476,10 @@
     "PasswordsDontMatch" : {
       "title" : "Пароли не совпадают",
       "description" : "Пожалуйста, попробуйте ещё раз."
+    },
+    "PeerRemovedPairing" : {
+      "title" : "Нужно удалить {{ productName }} из списка подключённых Bluetooth-устройств на смартфоне",
+      "description" : "У вашего {{ productName }} изменились конфигурации Bluetooth. Удалите устройство в настройках смартфона. Затем откройте Ledger Live и попробуйте подключиться повторно."
     },
     "SelectExchangesLoadError" : {
       "title" : "Ошибка при загрузке",
@@ -518,7 +539,7 @@
       "title" : "Сумма для заморозки должна быть не меньше 1"
     },
     "TronSendTrc20ToNewAccountForbidden" : {
-      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес начала нужно отправить не менее 0,1 TRX.",
+      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес сначала нужно отправить минимум 0,1 TRX.",
       "description" : "Для активации сначала отправьте TRX или TRC-10 на счёт, после чего вы сможете получать TRC-20."
     },
     "TronUnexpectedFees" : {
@@ -831,6 +852,13 @@
       "modalButtonLabelBase" : "Разрешить",
       "modalButtonLabelSettingsVariant" : "Перейти в Настройки",
       "dontPair" : "Не подключать"
+    },
+    "camera" : {
+      "title" : "Разрешите доступ к камере",
+      "authorizeDescription" : "Чтобы сканировать QR-коды, пожалуйста, разрешите доступ к камере.",
+      "authorizeButtonTitle" : "Разрешить",
+      "goToSettingsDescription" : "Чтобы сканировать QR-коды, пожалуйста, разрешите доступ к камере в Настройках.",
+      "goToSettingsButtonTitle" : "Перейти в Настройки"
     }
   },
   "fees" : {
@@ -1115,6 +1143,12 @@
     "mostPopular" : "Самые популярные"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "Установить те же приложения, что и на устройстве {{deviceName}}?",
+      "titleNoDeviceName" : "Установить те же приложения, что и на предыдущем устройстве Ledger?",
+      "installCTA" : "Установить",
+      "skipCTA" : "Отложить"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} мин.",
       "title" : "{{ productName }} использует приложения для безопасных блокчейн-транзакций",
@@ -1126,7 +1160,7 @@
       "loading" : "Загружаем...",
       "resolving" : "Устраняем зависимости приложения...",
       "progress" : "Установка приложений: {{progress}}%",
-      "disclaimer" : "Приложения в {{ productName }} нужны для подтверждения транзакций. Добавить или удалить их можно в любое время."
+      "disclaimer" : "Добавляйте или удаляйте приложения в любое время с помощью Ledger Live."
     }
   },
   "onboarding" : {
@@ -1781,7 +1815,8 @@
           "title" : "Устройство заблокировано",
           "subtitle" : "Разблокируйте {{ productName }} и повторите попытку."
         },
-        "retryCta" : "Попробуйте ещё раз"
+        "retryCta" : "Повторить",
+        "openSettingsCta" : "Открыть настройки Bluetooth"
       }
     }
   },
@@ -2116,6 +2151,8 @@
       "undelegated" : "Отозвано: {{amount}}",
       "undelegatedFrom" : "Отозваны с",
       "undelegatedAmount" : "Отозванная сумма",
+      "withdrawnFrom" : "Выведено из",
+      "withdrawnAmount" : "Выведенная сумма",
       "rewardFrom" : "Вознаграждение от",
       "rewardAmount" : "Полученная сумма",
       "memo" : "Memo",
@@ -2272,12 +2309,6 @@
         "unsupported" : "Не поддерживается",
         "settings" : "Настройки приложения",
         "includeGeneralSettings" : "Импорт настроек настольного приложения"
-      },
-      "fallback" : {
-        "header" : "Импорт счетов",
-        "title" : "Доступ к камере",
-        "desc" : "Чтобы сканировать QR-коды, пожалуйста, включите камеру в Настройках",
-        "buttonTitle" : "Перейти в Настройки"
       }
     },
     "availableBalance" : "Доступно",
@@ -2550,6 +2581,10 @@
       "recommendations" : {
         "title" : "Рекомендации",
         "desc" : "Оцените рекомендации и специальные предложения именно для вас. Они сделают криптопутешествие ещё ярче"
+      },
+      "largeMover" : {
+        "title" : "Значительное изменение цены",
+        "desc" : "Вы получите уведомление о значительных флуктуациях курса BTC и ETH"
       },
       "price" : {
         "title" : "Уведомления о курсах",
@@ -3622,7 +3657,7 @@
       "title" : "Подтвердите обмен на устройстве",
       "alert" : {
         "default" : "Перед отправкой проверьте сведения об обмене на устройстве. Обмен адресами осуществляется безопасно и не требует проверки.",
-        "cic" : "Перед отправкой проверьте детали обмена на устройстве. CIC может дополнительно проверять некоторые транзакции, что приведёт к задержкам."
+        "provider" : "Перед отправкой проверьте детали обмена на устройстве. {{providerName}} может дополнительно проверять некоторые транзакции, что приведёт к задержкам."
       },
       "acceptTerms" : "Подтверждая эту транзакцию, я принимаю\n<0>условия использования <0>{{provider}}</0></0>",
       "notice" : "Перед отправкой проверьте сведения об обмене на устройстве. Обмен адресами осуществляется безопасно и не требует проверки."
@@ -3824,7 +3859,7 @@
       "title" : "Хранилище",
       "used" : "Использовано",
       "genuine" : "Устройство подлинное",
-      "appsInstalled" : "<0>{{number}}</0> приложение",
+      "appsInstalled" : "Приложений: <0>{{number}}</0>",
       "appsInstalled_plural" : "Приложений: <0>{{number}}</0>",
       "storageAvailable" : "доступно",
       "noFreeSpace" : "Не хватает свободного места",
@@ -4653,6 +4688,207 @@
       }
     }
   },
+  "elrond" : {
+    "info" : {
+      "available" : {
+        "title" : "Доступно EGLD",
+        "description" : "Эту сумму можно отправить."
+      },
+      "delegated" : {
+        "title" : "Активы в стейкинге",
+        "description" : "Застейканные активы косвенно используются валидаторами. Они нужны в обеспечении работы нод сети, обработке транзакций и защите блокчейна посредством участия в механизме консенсуса."
+      },
+      "undelegating" : {
+        "title" : "Ожидает вывода",
+        "description" : "Отозванные активы подлежат 10-дневной заморозке, прежде чем их можно будет вывести."
+      },
+      "delegationUnavailable" : {
+        "title" : "Делегирование недоступно",
+        "description" : "Доступных средств на счету недостаточно для нового делегирования."
+      }
+    },
+    "delegation" : {
+      "delegationEarn" : "Стейкайте EGLD, чтобы гарантировать безопасность блокчейн-сети Elrond и получать вознаграждения.",
+      "info" : "Что такое стейкинг и как он работает?",
+      "claimRewards" : "Получить вознаграждения",
+      "claimAvailableRewards" : "Получить {{amount}}",
+      "header" : "Мой стейк",
+      "Amount" : "Сумма",
+      "noRewards" : "Вознаграждений нет",
+      "delegate" : "Застейкать повторно",
+      "undelegate" : "Вывести из стейкинга",
+      "reward" : "Получить вознаграждения",
+      "commission" : "Комиссия",
+      "iDelegate" : "Я делегирую",
+      "totalStake" : "Общий пул",
+      "stepperHeader" : {
+        "starter" : "Получить вознаграждения",
+        "validator" : "Делегирование активов",
+        "amountSubTitle" : "Сумма для стейкинга",
+        "summary" : "Сводка",
+        "verification" : "Проверка",
+        "selectDevice" : "Выбор устройства",
+        "connectDevice" : "Добавление устройства",
+        "stepRange" : "Шаг {{currentStep}} из {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "starter" : {
+            "description" : "Вы можете получать вознаграждения, стейкая EGLD с помощью валидаторов.",
+            "steps" : {
+              "0" : "Застейканные активы остаются в вашей собственности.",
+              "1" : "Активы станут доступны через 10 дней после отмены стейкинга.",
+              "2" : "Застейкайте активы с помощью устройства Ledger."
+            },
+            "warning" : {
+              "description" : "Подойдите к выбору валидаторов для стейкинга ответственно. Единственный риск сейчас — не получить вознаграждение по разным причинам, поэтому валидатора следует выбирать с учётом его надёжности, отзывчивости и комиссии."
+            },
+            "cta" : "Продолжить"
+          },
+          "validator" : {
+            "validators" : "Валидаторы",
+            "myDelegations" : "Мой стейк",
+            "cta" : "Продолжить",
+            "apr" : "Годовая доходность: {{amount}}",
+            "totalAvailable" : "Всего голосов: <0>{{amount}}</0>",
+            "allAssetsUsed" : "Использованы все активы",
+            "noResultsFound" : "Валидатор по запросу <0>«{{search}}»</0> не найден",
+            "currentAmount" : "(+<0>{{amount}}</0>)"
+          },
+          "amount" : {
+            "assetsRemaining" : "Осталось активов: <0>{{amount}}</0>",
+            "allAssetsUsed" : "Использованы все активы",
+            "minAmount" : "Мин. сумма: <0>{{min}}</0>",
+            "incorrectAmount" : "Макс. сумма: <0>{{max}}</0>",
+            "insufficientDelegation" : "Общая сумма для стейкинга должна превышать 1 {{label}} для каждого валидатора.",
+            "wrongUndelegations" : "Оставшаяся сумма застейканных {{label}} должна быть равна 0, либо быть больше 1 {{label}} для каждого валидатора.",
+            "cta" : "Продолжить"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "Вы успешно застейкали активы",
+              "text" : "Баланс обновится после подтверждения транзакции в сети.",
+              "cta" : "Подробнее"
+            },
+            "pending" : {
+              "title" : "Транслируем транзакцию..."
+            },
+            "broadcastError" : "Возможно, ваша транзакция не прошла. Пожалуйста, подождите немного, а затем проверьте историю транзакций, прежде чем повторить попытку."
+          }
+        }
+      },
+      "drawer" : {
+        "status" : "Статус",
+        "rewards" : "Вознаграждение",
+        "active" : "Активно",
+        "inactive" : "Неактивно",
+        "completionDate" : "Дата завершения",
+        "redelegatedFrom" : "Повторно делегировано из",
+        "completionDateHit" : "Выполнено"
+      }
+    },
+    "claimRewards" : {
+      "stepperHeader" : {
+        "validator" : "Укажите вознаграждение для получения",
+        "method" : "Получить вознаграждения",
+        "summary" : "Сводка",
+        "selectDevice" : "Выбор устройства",
+        "connectDevice" : "Добавление устройства",
+        "stepRange" : "Шаг {{currentStep}} из {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "method" : {
+            "youEarned" : "Вы получили",
+            "byDelegationAssetsTo" : "за стейкинг активов",
+            "claimRewards" : "Получить вознаграждение",
+            "reDelegateRewards" : "Стейкинг вознаграждений",
+            "claimRewardsInfo" : "Они будут получены прямо сейчас и зачислены на баланс.",
+            "reDelegateRewardsInfo" : "Они будут запрошены и автоматически добавлены в стейкинг тому же валидатору.",
+            "compoundOrCashIn" : "Застейкать вознаграждения или получить их?",
+            "claimRewardsTooltip" : "Вознаграждения будут зачислены на баланс",
+            "reDelegateRewardsTooltip" : "Вознаграждения будут добавлены к стейкингу",
+            "cta" : "Продолжить"
+          },
+          "verification" : {
+            "success" : {
+              "claimRewardsSuccess" : "Вознаграждения получены и добавлены к доступному балансу.",
+              "reDelegateRewardsSuccess" : "Вознаграждения были добавлены в стейкинг тому же валидатору.",
+              "text" : "Баланс обновится после подтверждения транзакции в сети.",
+              "cta" : "Подробнее"
+            },
+            "pending" : {
+              "title" : "Транслируем транзакцию..."
+            },
+            "broadcastError" : "Возможно, ваша транзакция не прошла. Пожалуйста, подождите немного, а затем проверьте историю транзакций, прежде чем повторить попытку."
+          }
+        }
+      }
+    },
+    "undelegation" : {
+      "stepperHeader" : {
+        "amountSubTitle" : "Сумма вывода из стейкинга",
+        "summary" : "Сводка",
+        "selectDevice" : "Выбор устройства",
+        "connectDevice" : "Добавление устройства",
+        "stepRange" : "Шаг {{currentStep}} из {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "amount" : {
+            "allAssetsUsed" : "Выбраны все активы",
+            "assetsRemaining" : "Остаток в делегировании: <0>{{amount}}</0>",
+            "minAmount" : "Мин. сумма: <0>{{min}}</0>",
+            "incorrectAmount" : "Макс. сумма: <0>{{max}}</0>",
+            "minRemaining" : "Минимальное требование: <0>{{min}}</0>"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "Вы успешно вывели активы из стейкинга",
+              "text" : "Баланс обновится после подтверждения транзакции в сети.",
+              "cta" : "Подробнее"
+            },
+            "pending" : {
+              "title" : "Транслируем транзакцию..."
+            },
+            "broadcastError" : "Возможно, ваша транзакция не прошла. Пожалуйста, подождите немного, а затем проверьте историю транзакций, прежде чем повторить попытку."
+          }
+        }
+      }
+    },
+    "withdraw" : {
+      "stepperHeader" : {
+        "validator" : "Укажите вознаграждение для получения",
+        "method" : "Получить вознаграждение",
+        "summary" : "Сводка",
+        "selectDevice" : "Выбор устройства",
+        "connectDevice" : "Добавление устройства",
+        "stepRange" : "Шаг {{currentStep}} из {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "method" : {
+            "youEarned" : "Вы вывели",
+            "byDelegationAssetsTo" : "из стейка",
+            "withdrawInfo" : "Они будут получены прямо сейчас и зачислены на баланс.",
+            "withdrawTooltip" : "Выведенные активы будут зачислены на баланс",
+            "cta" : "Продолжить"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "Вознаграждения получены и добавлены к доступному балансу.",
+              "text" : "Баланс обновится после подтверждения транзакции в сети.",
+              "cta" : "Подробнее"
+            },
+            "pending" : {
+              "title" : "Транслируем транзакцию..."
+            },
+            "broadcastError" : "Возможно, ваша транзакция не прошла. Пожалуйста, подождите немного, а затем проверьте историю транзакций, прежде чем повторить попытку."
+          }
+        }
+      }
+    }
+  },
   "tezos" : {
     "AccountHeader" : {
       "title" : "Можно получать вознаграждения за делегирование счёта",
@@ -5264,7 +5500,8 @@
     "actions" : {
       "redelegate" : "Переделегировать",
       "collectRewards" : "Получить вознаграждения",
-      "undelegate" : "Отозвать"
+      "undelegate" : "Отозвать",
+      "withdraw" : "Вывод средств"
     }
   },
   "ValidateOnDevice" : {
