File apps/ledger-live-mobile/src/locales/en/common.json was translated to ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -518,7 +518,7 @@
       "title" : "Сумма для заморозки должна быть не меньше 1"
     },
     "TronSendTrc20ToNewAccountForbidden" : {
-      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес начала нужно отправить не менее 0,1 TRX.",
+      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес сначала нужно отправить минимум 0,1 TRX.",
       "description" : "Для активации сначала отправьте TRX или TRC-10 на счёт, после чего вы сможете получать TRC-20."
     },
     "TronUnexpectedFees" : {
@@ -831,6 +831,13 @@
       "modalButtonLabelBase" : "Разрешить",
       "modalButtonLabelSettingsVariant" : "Перейти в Настройки",
       "dontPair" : "Не подключать"
+    },
+    "camera" : {
+      "title" : "Разрешите доступ к камере",
+      "authorizeDescription" : "Чтобы сканировать QR-коды, пожалуйста, разрешите доступ к камере.",
+      "authorizeButtonTitle" : "Разрешить",
+      "goToSettingsDescription" : "Чтобы сканировать QR-коды, пожалуйста, разрешите доступ к камере в Настройках.",
+      "goToSettingsButtonTitle" : "Перейти в Настройки"
     }
   },
   "fees" : {
@@ -1115,6 +1122,12 @@
     "mostPopular" : "Самые популярные"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "Установить те же приложения, что и на устройстве {{deviceName}}?",
+      "titleNoDeviceName" : "Установить те же приложения, что и на предыдущем устройстве Ledger?",
+      "installCTA" : "Установить",
+      "skipCTA" : "Отложить"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} мин.",
       "title" : "{{ productName }} использует приложения для безопасных блокчейн-транзакций",
@@ -1126,7 +1139,7 @@
       "loading" : "Загружаем...",
       "resolving" : "Устраняем зависимости приложения...",
       "progress" : "Установка приложений: {{progress}}%",
-      "disclaimer" : "Приложения в {{ productName }} нужны для подтверждения транзакций. Добавить или удалить их можно в любое время."
+      "disclaimer" : "Добавляйте или удаляйте приложения в любое время с помощью Ledger Live."
     }
   },
   "onboarding" : {
@@ -1623,6 +1636,10 @@
             "label" : "Проверьте, обнаружено ли устройство Nano X."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Почему не подключается устройство Ledger?",
+        "description" : "После активации Bluetooth на устройстве Ledger иногда могут возникать проблемы подключения к мобильному приложению Ledger Live. Чтобы исправить это, воспользуйтесь кнопкой «Как это исправить?»."
       }
     },
     "stepImportAccounts" : {
@@ -2272,12 +2289,6 @@
         "unsupported" : "Не поддерживается",
         "settings" : "Настройки приложения",
         "includeGeneralSettings" : "Импорт настроек настольного приложения"
-      },
-      "fallback" : {
-        "header" : "Импорт счетов",
-        "title" : "Доступ к камере",
-        "desc" : "Чтобы сканировать QR-коды, пожалуйста, включите камеру в Настройках",
-        "buttonTitle" : "Перейти в Настройки"
       }
     },
     "availableBalance" : "Доступно",
@@ -3622,7 +3633,7 @@
       "title" : "Подтвердите обмен на устройстве",
       "alert" : {
         "default" : "Перед отправкой проверьте сведения об обмене на устройстве. Обмен адресами осуществляется безопасно и не требует проверки.",
-        "cic" : "Перед отправкой проверьте детали обмена на устройстве. CIC может дополнительно проверять некоторые транзакции, что приведёт к задержкам."
+        "provider" : "Перед отправкой проверьте детали обмена на устройстве. {{providerName}} может дополнительно проверять некоторые транзакции, что приведёт к задержкам."
       },
       "acceptTerms" : "Подтверждая эту транзакцию, я принимаю\n<0>условия использования <0>{{provider}}</0></0>",
       "notice" : "Перед отправкой проверьте сведения об обмене на устройстве. Обмен адресами осуществляется безопасно и не требует проверки."
@@ -3824,7 +3835,7 @@
       "title" : "Хранилище",
       "used" : "Использовано",
       "genuine" : "Устройство подлинное",
-      "appsInstalled" : "<0>{{number}}</0> приложение",
+      "appsInstalled" : "Приложений: <0>{{number}}</0>",
       "appsInstalled_plural" : "Приложений: <0>{{number}}</0>",
       "storageAvailable" : "доступно",
       "noFreeSpace" : "Не хватает свободного места",
