File apps/ledger-live-mobile/src/locales/en/common.json was translated to de-DE locale

--- a/apps/ledger-live-mobile/src/locales/de/common.json
+++ b/apps/ledger-live-mobile/src/locales/de/common.json
@@ -831,6 +831,13 @@
       "modalButtonLabelBase" : "Autorisieren",
       "modalButtonLabelSettingsVariant" : "Gehen Sie zu Einstellungen",
       "dontPair" : "Nicht verbinden"
+    },
+    "camera" : {
+      "title" : "Kamera autorisieren",
+      "authorizeDescription" : "Autorisieren Sie bitte die Kamera zum Scannen von QR-Codes.",
+      "authorizeButtonTitle" : "Autorisieren",
+      "goToSettingsDescription" : "Autorisieren Sie bitte die Kamera in den Einstellungen, um QR-Codes zu scannen.",
+      "goToSettingsButtonTitle" : "Gehen Sie zu Einstellungen"
     }
   },
   "fees" : {
@@ -1115,6 +1122,12 @@
     "mostPopular" : "Am beliebtesten"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "Die gleichen Apps wie auf {{deviceName}} installieren?",
+      "titleNoDeviceName" : "Die gleichen Apps wie auf dem vorherigen Ledger-Gerät installieren?",
+      "installCTA" : "Jetzt installieren",
+      "skipCTA" : "Ich mache das später"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} Min.",
       "title" : "{{ productName }} nutzt Apps, um sichere Blockchain-Transaktionen zu ermöglichen",
@@ -1126,7 +1139,7 @@
       "loading" : "Lade Daten...",
       "resolving" : "Auflösen von Abhängigkeiten",
       "progress" : "Installieren von Apps {{progress}} %",
-      "disclaimer" : "Apps auf {{ productName }} werden zur Autorisierung von Transaktionen verwendet. Sie können sie jederzeit hinzufügen oder entfernen."
+      "disclaimer" : "Sie können jederzeit Apps aus Ledger Live hinzufügen oder entfernen."
     }
   },
   "onboarding" : {
@@ -1623,6 +1636,10 @@
             "label" : "Prüfen Sie, ob Ihr Nano X erkannt wird."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Warum kann ich mein Ledger-Gerät nicht verbinden?",
+        "description" : "Wenn Sie Probleme haben, sich mit Ledger Live Mobile zu verbinden, nachdem Sie Bluetooth auf Ihrem Ledger-Gerät aktiviert haben, können Sie die Anweisungen befolgen, indem Sie auf die Schaltfläche \"Learn how to fix that\" (Erfahren, wie man das behebt) weiter unten tippen"
       }
     },
     "stepImportAccounts" : {
@@ -2272,12 +2289,6 @@
         "unsupported" : "Nicht unterstützt",
         "settings" : "App-Einstellungen",
         "includeGeneralSettings" : "Desktop-Einstellungen importieren"
-      },
-      "fallback" : {
-        "header" : "Konto importieren",
-        "title" : "Kamera einschalten",
-        "desc" : "Bitte aktivieren Sie die Kamera in den Einstellungen, um QR-Codes zu scannen.",
-        "buttonTitle" : "Gehen Sie zu Einstellungen"
       }
     },
     "availableBalance" : "Verfügbares Guthaben",
@@ -3622,7 +3633,7 @@
       "title" : "Swap-Vorgang auf dem Gerät bestätigen",
       "alert" : {
         "default" : "Überprüfen Sie die Details des Tauschs auf Ihrem Gerät, bevor Sie sie senden. Die Adressen werden sicher ausgetauscht, sodass Sie diese nicht verifizieren müssen.",
-        "cic" : "Verifizieren Sie die Swap-Details auf Ihrem Gerät, bevor Sie diese senden. CIC muss möglicherweise eine zusätzliche Überprüfung für einige Transaktionen durchführen, was zu einer Verzögerung führen kann."
+        "provider" : "Verifizieren Sie die Swap-Details auf Ihrem Gerät, bevor Sie diese senden. {{providerName}} muss möglicherweise eine zusätzliche Überprüfung für einige Transaktionen durchführen, was zu einer Verzögerung führen kann."
       },
       "acceptTerms" : "Durch Validieren dieser Transaktion stimme ich den\n<0>Nutzungsbedingungen von <0>{{provider}}</0> zu</0>",
       "notice" : "Überprüfen Sie die Details des Tauschs auf Ihrem Gerät, bevor Sie sie senden. Die Adressen werden sicher ausgetauscht, sodass Sie diese nicht verifizieren müssen."
