--- a/apps/ledger-live-mobile/src/locales/pt-BR/common.json
+++ b/apps/ledger-live-mobile/src/locales/pt-BR/common.json
@@ -831,6 +831,13 @@
       "modalButtonLabelBase" : "Autorizar",
       "modalButtonLabelSettingsVariant" : "Ir para Configurações",
       "dontPair" : "Não emparelhar"
+    },
+    "camera" : {
+      "title" : "Autorize a câmera",
+      "authorizeDescription" : "Autorize a câmera para escanear QR codes.",
+      "authorizeButtonTitle" : "Autorizar",
+      "goToSettingsDescription" : "Autorize a câmera em Configurações para escanear QR codes.",
+      "goToSettingsButtonTitle" : "Ir para Configurações"
     }
   },
   "fees" : {
@@ -1115,6 +1122,12 @@
     "mostPopular" : "Mais populares"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "Instalar os mesmos aplicativos da {{deviceName}}?",
+      "titleNoDeviceName" : "Instalar os mesmos aplicativos do dispositivo Ledger anterior?",
+      "installCTA" : "Instalar agora",
+      "skipCTA" : "Farei isso mais tarde."
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} min",
       "title" : "A {{ productName }} utiliza aplicativos para permitir transações seguras em blockchains",
@@ -1126,7 +1139,7 @@
       "loading" : "Carregando...",
       "resolving" : "Resolvendo dependências",
       "progress" : "Instalando aplicativos {{progress}}%",
-      "disclaimer" : "Aplicativos da {{ productName }} são usados para aprovar transações. Você pode adicioná-los ou removê-los a qualquer momento."
+      "disclaimer" : "Adicione ou remova aplicativos a qualquer hora com o Ledger Live."
     }
   },
   "onboarding" : {
@@ -1623,6 +1636,10 @@
             "label" : "Verifique se a sua Nano X foi detectada."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Por que eu não consigo conectar minha Ledger?",
+        "description" : "Se você estiver enfrentando problemas para se conectar ao Ledger Live mobile depois de ter habilitado o Bluetooth em sua Ledger, você pode seguir as instruções tocando no botão \"Aprender como corrigir isso\" abaixo"
       }
     },
     "stepImportAccounts" : {
@@ -2272,12 +2289,6 @@
         "unsupported" : "Incompatível",
         "settings" : "Configurações do aplicativo",
         "includeGeneralSettings" : "Importar configurações de desktop"
-      },
-      "fallback" : {
-        "header" : "Importar conta",
-        "title" : "Habilitar câmera",
-        "desc" : "Habilite a câmera nas Configurações para escanear QR codes.",
-        "buttonTitle" : "Vá para Configurações"
       }
     },
     "availableBalance" : "Saldo disponível",
@@ -3622,7 +3633,7 @@
       "title" : "Confirmar a operação de troca no dispositivo",
       "alert" : {
         "default" : "Verifique os detalhes da troca no seu dispositivo antes de enviá-la. Os endereços são comunicados com segurança para que você não precise verificá-los.",
-        "cic" : "Verifique os detalhes da troca no seu dispositivo antes de enviá-la. O CIC pode precisar fazer verificações adicionais para algumas transações, resultando em demora."
+        "provider" : "Verifique os detalhes da troca no seu dispositivo antes de enviá-la. {{providerName}} pode precisar fazer verificações adicionais para algumas transações, resultando em demora."
       },
       "acceptTerms" : "Ao validar esta transação, eu aceito\nos termos de uso da <0><0>{{provider}}</0></0>",
       "notice" : "Verifique os detalhes da troca no seu dispositivo antes de enviá-la. Os endereços são comunicados com segurança para que você não precise verificá-los."
