File apps/ledger-live-mobile/src/locales/en/common.json was translated to ar-AE locale

--- a/apps/ledger-live-mobile/src/locales/ar/common.json
+++ b/apps/ledger-live-mobile/src/locales/ar/common.json
@@ -831,6 +831,13 @@
       "modalButtonLabelBase" : "تصريح",
       "modalButtonLabelSettingsVariant" : "انتقل إلى الإعدادات",
       "dontPair" : "لا تُقرِن"
+    },
+    "camera" : {
+      "title" : "منح تفويض للكاميرا",
+      "authorizeDescription" : "يُرجى منح تفويض للكاميرا لمسح أكواد QR ضوئياً.",
+      "authorizeButtonTitle" : "تصريح",
+      "goToSettingsDescription" : "يُرجى منح تفويض للكاميرا في الإعدادات لمسح أكواد QR ضوئياً.",
+      "goToSettingsButtonTitle" : "انتقل إلى الإعدادات"
     }
   },
   "fees" : {
@@ -1115,6 +1122,12 @@
     "mostPopular" : "الأكثر شعبية"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "تثبيت نفس التطبيقات كما في {{deviceName}}؟",
+      "titleNoDeviceName" : "تثبيت نفس التطبيقات كما في جهاز Ledger السابق؟",
+      "installCTA" : "تثبيت الآن",
+      "skipCTA" : "سأفعل هذا لاحقاً"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} دقيقة",
       "title" : "{{ productName }} يستخدم تطبيقات لتمكين المعاملات الآمنة على سلسلة الكتل",
@@ -1126,7 +1139,7 @@
       "loading" : "جاري التحميل ...",
       "resolving" : "حل التبعيات",
       "progress" : "تثبيت التطبيقات %{{progress}}",
-      "disclaimer" : "التطبيقات على {{ productName }} تُستخدم للموافقة على المعاملات. يمكنك إضافتها أو حذفها في أي وقت."
+      "disclaimer" : "قم بإضافة أو حذف التطبيقات في أي وقت من Ledger Live."
     }
   },
   "onboarding" : {
@@ -1623,6 +1636,10 @@
             "label" : "تحقق مما إذا كان قد تم اكتشاف Nano X الخاصة بك."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "لماذا لا أستطيع جهازي Ledger؟",
+        "description" : "إذا كنت تواجه مشكلات في الاتصال بـ Ledger Live للجوّال بعد أن قمت بتمكين البلوتوث على جهازك Ledger، يمكنك اتباع التعليمات بالنقر على زر \"Learn how to fix that (تعلم كيفية إصلاح ذلك)\" أدناه"
       }
     },
     "stepImportAccounts" : {
@@ -2272,12 +2289,6 @@
         "unsupported" : "غير مدعوم",
         "settings" : "إعدادات التطبيقات",
         "includeGeneralSettings" : "استيراد إعدادات سطح المكتب"
-      },
-      "fallback" : {
-        "header" : "استيراد الحساب",
-        "title" : "تمكين الكاميرا",
-        "desc" : "يرجى تمكين الكاميرا في الإعدادات لإجراء المسح الضوئي لأكواد QR.",
-        "buttonTitle" : "انتقل إلى الإعدادات"
       }
     },
     "availableBalance" : "الرصيد المتاح",
@@ -3622,7 +3633,7 @@
       "title" : "تأكيد عملية المبادلة على الجهاز",
       "alert" : {
         "default" : "تحقق من تفاصيل المبادلة على جهازك قبل إرسالها. يتم تبادل العناوين بشكل آمن حتى لا تضطر إلى التحقق منهم.",
-        "cic" : "تحقق من تفاصيل المبادلة على جهازك قبل إرسالها. CIC قد تحتاج إلى إجراء تحقق إضافي لبعض المعاملات، مما يؤدي إلى تأخير."
+        "provider" : "تحقق من تفاصيل المبادلة على جهازك قبل إرسالها. {{providerName}} قد يحتاج إلى إجراء تحقق إضافي لبعض المعاملات، ما يؤدي إلى تأخير."
       },
       "acceptTerms" : "بتأكيد صحة هذه المعاملة، أنا أقبل\n<0><0>شروط استخدام</0> {{provider}}</0>",
       "notice" : "تحقق من تفاصيل المبادلة على جهازك قبل إرسالها. يتم تبادل العناوين بشكل آمن حتى لا تضطر إلى التحقق منهم."
