feat: add WalletConnect entry point in Main nav button on LLM
feat: Add WalletConnect entry point in main nav button in llm

Use toggle instead of useFeature

Fix typo

fix: ⚡ Handle Scroll when too much entres in classic mode and reborn mode

--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -3305,6 +3305,10 @@
           }
         }
       }
+    },
+    "walletConnect": {
+      "title": "WalletConnect",
+      "description": "Connect your wallet to dapps"
     }
   },
   "signMessage": {
